your commit comment

--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <h1>Welcome to my blog</h1>
-    <div>
-        <h2>About me:</h2>
-        <p>Dimah Alolayan, computer science student. Coding and programming are my passion
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="welcomeBackground">
+        <h1 id="welcome">Welcome<br></h1>
+        <h1 id="welcomeArabic">أهلًا وسهلًا </h1>
+    </div>
+    <div class="AboutMe">
+        <br>
+        <h2 id="aboutmeAlgin">About me:</h2>
+        <h3><b>Dimah Alolayan - </b> <b class="arabic">ديما العليان</b> </h3>
+        <p> computer science student. Coding and programming are my passion<br>
             I'm an advanced java programmer, still learning python, javascript and swift.<br>
-            I came all the way from saudi arabia for code nation only, the reason why I came this far because I found
+            I came all the way from saudi arabia for code nation only, the reason why I came this far because I
+            found<br>
             what I was looking for, which is a place who can create employable talent.<br>
             My experience here at code nation is one of the best experiences I have ever had! <br>
             The vibe & the people at code nation are very encouraging and make you want to produce more work.
@@ -17,15 +28,13 @@
 
 
     <div>
-        <button type="button"><a href="unit1.html"> Outcome One </a></button>
-        <button type="button"><a href="unit2.html">Outcome Two</a></button>
-        <button type="button"><a href="contactme.html">Contact me </a></button>
+        <a href="unit1.html">Outcome One</a>
+        <a href="unit2.html">Outcome Two</a>
+        <a href="contactme.html">Contact me</a>
     </div>
 
-    <title>Document</title>
-</head>
 
-<body>
+
 
 </body>
 
