--- a/unit1.html
+++ b/unit1.html
@@ -3,155 +3,200 @@
 
 <head>
     <meta charset="UTF-8">
-    <h1>Outcome One </h1>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <title>Unit One</title>
+</head>
+
+<body>
+    <div class="unitAndOutcome">
+        <h1>Unit One</h1>
+        <h2>Outcome One</h2>
+    </div>
     <h3> 1.1 Describing the purpose of IT in modern business</h3>
-    <p>Information technology (IT) has become a vital and integral part of every business plan.<br>
+    <p class="paragraph">Information technology (IT) has become a vital and integral part of every business plan.<br>
         multinational corporations who maintain mainframe systems and databases to small businesses that own a single
         computer, IT plays a role.<br>
         The reasons for the omnipresent use of computer technology in business can best be determined by looking at how
         it is being used across the business world.
     </p>
-    <h3>1.2 Describing methods, skills and resources needed to complete digital projects successfully – what do you need
+    <h3>1.2 Describing methods, skills and resources needed to complete digital projects successfully<br> – what do you
+        need
         to make projects successful? What tools? What skills? </h3>
-    <p>For the project manager skills we need:
+    <p class="paragraph">For the project manager skills we need:
         <br>
-        <ul>
+        <ul class="paragraph">
             <li> Excellent Communication Skills</li>
         </ul>
-        effective communication doesn’t just happen. You have to put in the time and effort to get to know your teams
-        and clients so that you can devise appropriate communication plans that connect with different personality
-        types.
+        <p class="paragraph">effective communication doesn’t just happen. You have to put in the time and effort to get
+            to know your teams<br>
+            and clients so that you can devise appropriate communication plans that connect with different personality
+            types.</p>
 
-        <ul>
+        <ul class="paragraph">
             <li> Is Detail-Oriented</li>
         </ul>
-        Attention to detail is one of those things that people don’t really notice unless you haven’t got it. <br>
-        However, it’s a skill that any effective project manager needs to have.
-        <ul>
+        <p class="paragraph"> Attention to detail is one of those things that people don’t really notice unless you
+            haven’t got it. <br>
+            However, it’s a skill that any effective project manager needs to have.</p>
+        <ul class="paragraph">
             <li> Very Organised</li>
         </ul>
-        Being organised is not only something I personally take pride in, it’s a vital skill for a role in project
-        management.
-        <ul>
+        <p class="paragraph"> Being organised is not only something I personally take pride in, it’s a vital skill for a
+            role in project
+            management.</p>
+        <ul class="paragraph">
             <li> Works Well Under Pressure</li>
         </ul>
-        Project Managers are ultimately responsible for delivering a project on time and within budget.<br>
-        So, it’s important to remember how to tolerate pressure and not to become overwhelmed by it.<br><br>
-        For the project tools:
+        <p class="paragraph"> Project Managers are ultimately responsible for delivering a project on time and within
+            budget.<br>
+            So, it’s important to remember how to tolerate pressure and not to become overwhelmed by it.<br><br>
+            For the project tools:</p>
         <ul>
-            <li>Search Engine Optimization (SEO) </li>
-            <li>Social Media</li>
-            <li>Content Management System</li>
-            <li>Slack</li>
-            <li>Trello</li>
-            <li>Google Docs</li>
+            <li class="paragraph">Search Engine Optimization (SEO) </li>
+            <li class="paragraph">Social Media</li>
+            <li class="paragraph">Content Management System</li>
+            <li class="paragraph">Slack</li>
+            <li class="paragraph">Trello</li>
+            <li class="paragraph">Google Docs</li>
         </ul>
     </p>
 
     <h3>1.3 Plan and carry out tasks using IT – e.g. making your website. How will you plan it? Include a link to your
         Trello board. </h3>
+
+    <p class="paragraph">
+        <a href="https://trello.com/b/nFg40Zds/html-css/">My Trello board</a>
+    </p>
+
     <p>
 
-        <ul>
+        <ul class="paragraph">
             <li> Set your purpose and goals. </li>
+
+            What is the purpose of your website?<br>
+            Is it to gain publicity for your business? To sell your inventory? To rally support behind a cause?<br>
+            It’s important to identify your website’s purpose, as well as your target audience.
         </ul>
-        What is the purpose of your website?<br>
-        Is it to gain publicity for your business? To sell your inventory? To rally support behind a cause?<br>
-        It’s important to identify your website’s purpose, as well as your target audience.
-        <ul>
+        <ul class="paragraph">
             <li>Create a budget.</li>
+            Write in Detail Your Website Specific Needs, Time to Know your Financial Limitations,
+            <br>
+            Interface Design Costs, Responsiveness, Creation and Insertion Costs, Expect For the Additional Costing
+            and
+            Don't <br>
+            Forget the Maintenance & Updating Cost.
         </ul>
 
-        <ul>
+        <ul class="paragraph">
             <li>Assign roles.</li>
+            Company stakeholders (owner, marketing manager, or whoever else represents a primary
+            function of the
+            business),<br>
+            Web developer, Content writer and/or editor, HTML/CSS professional and Web and graphic designer
         </ul>
-        Company stakeholders (owner, marketing manager, or whoever else represents a primary function of the
-        business),<br>
-        Web developer, Content writer and/or editor, HTML/CSS professional and Web and graphic designer
-        <ul>
+
+        <ul class="paragraph">
             <li> Create a content strategy.</li>
-        </ul>
-        The content will you be displaying on your website, Content is basically anything that gives your visitors
-        information. <br>
-        It can include, Blog posts, Documents, Video, Pictures (such as in a gallery), Slideshows and Embedded social
-        media feeds (such as your Twitter stream or Facebook page updates)
 
-        <ul>
+            The content will you be displaying on your website, Content is basically anything that
+            gives your visitors
+            information. <br>
+            It can include, Blog posts, Documents, Video, Pictures (such as in a gallery), Slideshows and Embedded
+            social
+            media feeds (such as your Twitter stream or Facebook page updates)
+        </ul>
+
+
+        <ul class="paragraph">
             <li>Structure your website.</li>
+            Decide what pages you’ll be using and what features will be on each one.<br>
+            Most websites have an About and Contact page, but the pages you use should meet your business’ needs.
         </ul>
-        Decide what pages you’ll be using and what features will be on each one.<br>
-        Most websites have an About and Contact page, but the pages you use should meet your business’ needs.
 
-        <ul>
+        <ul class="paragraph">
             <li>Create a mock-up.</li>
+            A page mock-up, also know as a wireframe, is essentially the outline of your website (with
+            the initial design
+            being the first draft).<br>
+            Usually created in Photoshop or Fireworks, you don’t have to put too much detail into your mock-up. Use
+            placeholder text to fill pages, and don’t worry about details.<br>
+            This is just to give everyone an idea of what the website will look like.
         </ul>
-        A page mock-up, also know as a wireframe, is essentially the outline of your website (with the initial design
-        being the first draft).<br>
-        Usually created in Photoshop or Fireworks, you don’t have to put too much detail into your mock-up. Use
-        placeholder text to fill pages, and don’t worry about details.<br>
-        This is just to give everyone an idea of what the website will look like.
-        <ul>
+
+        <ul class="paragraph">
             <li>Start designing.</li>
-        </ul>
-        Make your navigation easy to understand and easy to find, Use an easy-to-read font for blocks of text.<br>
-        Choose a background color and text color that contrast well, Make sure your site fits the screen.<br>
-        Keep your website light so that it loads quickly, Make the company logo and tag line prominent on the page, <br>
-        Keep styles and colors consistent across the website, Make copy clear and concise, Make notes about what to
-        include in the style sheet as you design,<br> as you want to keep style and function separate and lastly You
-        should also design with the future in mind.
 
-        <ul>
+            Make your navigation easy to understand and easy to find, Use an easy-to-read font for
+            blocks of text.<br>
+            Choose a background color and text color that contrast well, Make sure your site fits the screen.<br>
+            Keep your website light so that it loads quickly, Make the company logo and tag line prominent on the
+            page,
+            <br>
+            Keep styles and colors consistent across the website, Make copy clear and concise, Make notes about what
+            to
+            include in the style sheet as you design,<br> as you want to keep style and function separate and lastly
+            You
+            should also design with the future in mind.
+        </ul>
+
+        <ul class="paragraph">
             <li>Test it out.</li>
+            Testing is important for getting out bugs out and catching details,Test it on your
+            cell
+            phone, <br>
+            your tablet, and your colleague’s cell phones and tablets too.
         </ul>
-        Testing is important for getting out bugs out and catching details,Test it on your cell phone, <br>
-        your tablet, and your colleague’s cell phones and tablets too.
 
-        <ul>
+        <ul class="paragraph">
             <li>Maintain your site.</li>
+            Once your site is launched, the work isn’t over. A website is an ongoing entity that
+            continuously represents
+            your company,<br>
+            so maintenance is very important.
         </ul>
-        Once your site is launched, the work isn’t over. A website is an ongoing entity that continuously represents
-        your company,<br>
-        so maintenance is very important.
 
     </p>
 
     <h3>1.4 Describe the risks that might impact digital projects – what causes digital projects to fail? Why? </h3>
 
-    <p>
+    <p class="paragraph">
         <ol>
-            <li>
-                <b> Misalignment with business processes:</b> <br>
+            <li class="paragraph">
+                Misalignment with business processes:<br>
                 Marketing may build a beautiful new website with a great user experience,<br>
-                but if they overlook the resulting impacts on the company’s business processes, the initiative is very
+                but if they overlook the resulting impacts on the company’s business processes, <br>the initiative is
+                very
                 likely to fail.<br><br>
             </li>
 
-            <li>
-                <b> Lack of cross-functional expertise: </b><br>
+            <li class="paragraph">
+                Lack of cross-functional expertise: <br>
                 Similar to number 1, there’s a common misconception that digital projects only need “digital
                 people.”<br>
-                But every digital project should have someone with business process management skills to help scope and
+                But every digital project should have someone with business process management skills to help scope
+                and<br>
                 plan the alignment between the customer journey and back-end operational processes.<br><br>
             </li>
 
-            <li>
-                <b>Limited digital strategy:</b><br>
-                Many digital projects are focused solely on the objective of one department or initiative, rather than
+            <li class="paragraph">
+                Limited digital strategy:<br>
+                Many digital projects are focused solely on the objective of one department or initiative, <br> rather
+                than
                 contributing to the overall company’s digital strategy and business goals.<br>
                 Define specifically what success looks like for the project and how it contributes to the company’s
                 business strategy before moving forward.<br><br>
             </li>
 
-            <li>
-                <b>Fixed plans that don’t account for change:</b><br>
+            <li class="paragraph">
+                Fixed plans that don’t account for change:<br>
                 The notion of a “5-year-plan” is dead. Using Agile, iterative processes that allow for frequent tweaks
                 and improvement is the only way to ensure that success is lasting.<br>
                 Your digital project plans should be flexible enough to reflect business changes within the company and
                 the market at any given moment.<br><br>
             </li>
 
-            <li>
-                <b>Overambition:</b> <br>
+            <li class="paragraph">
+                Overambition: <br>
                 Expecting perfection instead of embracing the “done is better than perfect” mantra tends to result in
                 projects that drag on way past their scope.<br>
                 Explore the idea of releasing “Minimum Viable Products,” or early versions of software that gauge how
@@ -159,59 +204,58 @@
             </li>
         </ol>
     </p>
-    <h3> 1.5 Describe how you would go about selecting and using IT systems and software – how do you select the right
+    <h3> 1.5 Describe how you would go about selecting and using IT systems and software <br> – how do you select the right
         kind of technology for the job? </h3>
-    <p>
+    <p class="paragraph">
 
-        <!-- lubna 7tsweeh lya-->
+        Researching and looking for the right technology that is suitable for the project’s needs and features,
+        considering the project’s budget.<br>
+        However, in this project we chose visual studio code to build the website. The reason we chose this platform is
+        because it supports hundreds of languages, <br>
+        also includes great tooling for web technologies such as HTML, CSS and JavaScript..
+
 
     </p>
 
     <h3>
-        1.6 Describe and provide analysis on how your chosen technologies have helped you achieve your outcomes. – How
+        1.6 Describe and provide analysis on how your chosen technologies have helped you achieve your outcomes.<br> –
+        How
         has Trello helped you plan and how can git and GitHub help with your codes version control
     </h3>
-    <p>
-        Trello surely helped me organize my ideas and it was very effective with managing my time .<br>
-        Git and GitHub is a very useful tool for group work or to save your work if you want to edit or try
-        something<br>
-        new and not lose your actual work
+    <p class="paragraph">
+        Trello surely helped me organize my ideas and it was very effective with managing my time. However, <br>
+        one of the most helpful features was archiving the trello board to use it later on different projects.<br>
+        Git and GitHub is a very useful tool to save your work if you want to edit it or try something new and not lose
+        your actual work <br>
+        and it’s also helpful for group work.
+
     </p>
 
-    <h3>1.7 Describe legal guidelines and constraints that impact digital projects – How does GDPR impact digital
-        projects?
+    <h3>1.7 Describe legal guidelines and constraints that impact digital projects<br>
+        – How does GDPR impact digital projects?
     </h3>
-    <p>
-        The Internet is a wonderful source of information and entertainment, <br>
-        but it’s important to realise that there are a number of restrictions on what you can and cannot do online.
-    </p>
-    <p>There are significant legal constraints on the uploading and downloading of software and other digital content,
+
+    <p class="paragraph">There are significant legal constraints on the uploading and downloading of software and other
+        digital
+        content,<br>
         including music and videos.<br>
         Many items are copyright and can incorporate digital rights management, such as restricting the number of times
         a media file can be copied or converted to another format.<br>
-        When you buy software, you will normally receive a licence to use it. You do not own the software itself, nor do
+        When you buy software, you will normally receive a licence to use it. You do not own the software itself, nor
+        do<br>
         you have the right to copy it.<br>
         Some types of licence, including freeware and shareware impose fewer restrictions.
     </p>
-    <p>Legal constraints on online behaviour include protection of children legislation which prohibits grooming and
-        inappropriate behaviour towards minors.<br>
-        You should ensure that you are familiar with the rules of “netiquette” which describes the recommended conduct
+    <p class="paragraph">
+        You should ensure that you are familiar with the rules of “netiquette” which describes the recommended
+        conduct<br>
         of users in various online environments.<br>
         Remember that libellous behaviour is subject to the same restrictions (and penalties) whether it is online or
         offline.
     </p>
 
-    <p>Legal constraints on online behaviour include protection of children legislation which prohibits grooming and
-        inappropriate behaviour towards minors. <br>
-        You should ensure that you are familiar with the rules of “netiquette” which describes the recommended conduct
-        of users in various online environments.<br>
-        Remember that libellous behaviour is subject to the same restrictions (and penalties) whether it is online or
-        offline.
-    </p>
-    <title>Document</title>
-</head>
 
-<body>
+
 
 </body>
 
