your commit comment

--- a/index.html
+++ b/index.html
@@ -3,39 +3,55 @@
 
 <head>
     <meta charset="UTF-8">
+
     <link rel="stylesheet" type="text/css" href="main.css">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="welcomeBackground">
-        <h1 id="welcome">Welcome<br></h1>
-        <h1 id="welcomeArabic">أهلًا وسهلًا </h1>
+
+
+    <header>
+        <nav>
+            <ul class="containers">
+                <li> <a href="unit1.html">Unit One - Outcome One</a></li>
+                <li> <a href="unit23.html">Unit One - Outcome Two & Three</a></li>
+                <li> <a href="unit2.html">Unit Two - Outcome One</a></li>
+                <li> <a href="contactme.html">Contact me</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+    <br>
+    <div>
+        <h1 id="welcome"><b>Welcome - </b><b id="welcomeArabic"> أهلًا وسهلا</b><br></h1>
     </div>
+
+    <h2 id="aboutmeAlgin">About me:</h2>
+    <span class="border"></span>
+
+    <h3 id="name"><b>Dimah Alolayan - </b> <b class="arabic">ديما العليان</b> </h3>
+
     <div class="AboutMe">
         <br>
-        <h2 id="aboutmeAlgin">About me:</h2>
-        <h3><b>Dimah Alolayan - </b> <b class="arabic">ديما العليان</b> </h3>
-        <p> computer science student. Coding and programming are my passion<br>
+        <p class="paragraphA"> computer science student. Coding and programming are my passion<br>
             I'm an advanced java programmer, still learning python, javascript and swift.<br>
-            I came all the way from saudi arabia for code nation only, the reason why I came this far because I
+            I came all the way from saudi arabia for code nation only, the reason why I came this far
+            because I
             found<br>
             what I was looking for, which is a place who can create employable talent.<br>
             My experience here at code nation is one of the best experiences I have ever had! <br>
-            The vibe & the people at code nation are very encouraging and make you want to produce more work.
+            The vibe & the people at code nation are very encouraging and make you want to produce more
+            work.
         </p>
+
+
+        <div class="img-wrap">
+            <img src="mypic.png">
+        </div>
     </div>
-
-
-    <div>
-        <a href="unit1.html">Outcome One</a>
-        <a href="unit2.html">Outcome Two</a>
-        <a href="contactme.html">Contact me</a>
-    </div>
-
-
-
-
 </body>
 
 </html>
